[gd_scene load_steps=3 format=3 uid="uid://c2rvtjoc0p3jb"]

[ext_resource type="Script" path="res://Scripts/LevelList.gd" id="1"]
[ext_resource type="Theme" path="res://Themes/StandardTheme.tres" id="7"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("7")

[node name="LevelList" type="ItemList" parent="."]
layout_mode = 0
anchor_right = 0.5
anchor_bottom = 0.9
theme = ExtResource("7")
theme_override_font_sizes/font_size = 32
script = ExtResource("1")

[node name="ActionBar" type="ColorRect" parent="."]
layout_mode = 0
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("7")

[node name="StartButton" type="Button" parent="ActionBar"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
theme = ExtResource("7")
theme_override_font_sizes/font_size = 48
text = "Start Level"

[node name="LevelDescription" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.9
offset_right = 960.0
offset_bottom = 2.57492e-05
theme = ExtResource("7")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true

[connection signal="pressed" from="ActionBar/StartButton" to="LevelList" method="_on_StartButton_pressed"]
